--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-Hello World1
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab_off</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+        }
+        .about-section {
+            margin-bottom: 20px;
+        }
+        .about-section h2 {
+            color: #007bff;
+        }
+        .about-section p {
+            line-height: 1.6;
+        }
+        .contact-info {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .contact-info a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Lab_off</h1>
+    </header>
+    <main>
+        <div class="about-section">
+            <h2>About Me</h2>
+            <p>🚀 Networks and systems Engineer | Infrastructure as Code Specialist | Technology Enthusiast</p>
+            <p>Dedicated to crafting innovative solutions in the realm of cloud-native technologies, I am currently immersed in the dynamic landscape of Ansible, Azure, AWS, Kubernetes, and Terraform. My passion lies in reshaping infrastructure through meticulous attention to Infrastructure as Code practices, proactive monitoring strategies, and comprehensive automation frameworks. With two years of hands-on experience as a junior networks and systems engineer, I thrive both collaboratively within teams and autonomously, adapting seamlessly to diverse work environments.</p>
+        </div>
+        <div class="education-section">
+            <h2>Education</h2>
+            <p>Master's in Networking - ESIEE-IT, Pontoise, France</p>
+            <p>Master's in Information and Communication Technology (ICT) and Management - INPTIC</p>
+        </div>
+        <div class="certifications-section">
+            <h2>Certifications and Credentials</h2>
+            <p>CCNP SCOR + SESA</p>
+            <p>Currently pursuing:</p>
+            <ul>
+                <li>Certified Kubernetes Administrator (CKA)</li>
+                <li>CCNP Enterprise (ENCOR & ENARSI)</li>
+            </ul>
+        </div>
+        <div class="contact-info">
+            <p>Let's connect and explore synergies in the ever-evolving tech landscape!</p>
+            <p>You can find me on <a href="https://www.linkedin.com/in/azzeddine-slimani-046384131/">LinkedIn</a>.</p>
+        </div>
+    </main>
+</body>
+</html>
